[package]
name = "blockchyp"
version = "2.20.1"
edition = "2021"
description = "This is the SDK for Rust. Like all BlockChyp SDKs, it provides a full client for the BlockChyp gateway and BlockChyp payment terminals."
documentation = "https://docs.blockchyp.com/#overview"
readme = "README.md"
repository = "https://github.com/blockchyp/blockchyp-rust"
license-file = "LICENSE"
keywords = ["payments", "blockchain"]

[lib]
name = "blockchyp"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
thiserror = "1.0"
aes = "0.8.4"
rand = "0.8.4"
form_urlencoded = "1.0"
uuid = { version = "1.8", features = ["v4"] }

[dev-dependencies]
assert-json-diff = "1.0"
